--- a/ponghal-app/player-2.html
+++ b/ponghal-app/player-2.html
@@ -29,21 +29,14 @@
             var socket = io.connect();
 
             $('button').on('mousedown', function(){
-                socket.emit('player1 ' + $(this).attr('id'), true);
+                console.log('moving: ' + $(this).attr('id'));
+                socket.emit('player 1 movement', $(this).attr('id'));
             });
-            $('button').on('mouseup', function(){
-                socket.emit('player1 ' + $(this).attr('id'), false)
-            })
         });
     </script>
 </head>
 <body>
     <button id="up" >Up</button>
     <button id="down" >Down</button>
-<script>
-    function up(){
-
-    }
-</script>
 </body>
 </html>
