--- a/ponghal-app/index.html
+++ b/ponghal-app/index.html
@@ -24,7 +24,7 @@
     <body>
         <main>
             <canvas id="game"></canvas>
-            <script src="game.js"></script>
+            <script src="public/game.js"></script>
         </main>
     </body>
 </html>
