--- a/ponghal-app/player-1.html
+++ b/ponghal-app/player-1.html
@@ -28,10 +28,10 @@
         $(function(){
             var socket = io.connect();
 
-            $('button').on('mousedown', function(){
+            $('button').on('mousedown touchstart', function(){
                 socket.emit('player1 ' + $(this).attr('id'), true);
             });
-            $('button').on('mouseup', function(){
+            $('button').on('mouseup touchend', function(){
                 socket.emit('player1 ' + $(this).attr('id'), false)
             })
         });
