-Tried adding bounce logic, failed miserably.. -Am slowly getting there

--- a/ponghal-app/player-2.html
+++ b/ponghal-app/player-2.html
@@ -63,7 +63,7 @@
     </script>
 </head>
 <body>
-    <button id="up" >Up</button>
-    <button id="down" >Down</button>
+    <!--<button id="up" >Up</button>-->
+    <!--<button id="down" >Down</button>-->
 </body>
 </html>
