--- a/ponghal-app/index.html
+++ b/ponghal-app/index.html
@@ -5,26 +5,14 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
         <style>
-            *{
-                margin: 0;
-                padding: 0;
-            }
-            body{
-                overflow: hidden;
-                height: 100%;
-                width: 100%;
-            }
-            main{
-                display: block;
-                width: 100%;
-                height: 100%;
-            }
+
         </style>
+        <link rel="stylesheet" type="text/css" href="public/css/style.css">
     </head>
     <body>
         <main>
             <canvas id="game"></canvas>
-            <script src="public/game.js"></script>
         </main>
+        <script src="public/game.js"></script>
     </body>
 </html>
