- (testing) added header fb player 1

--- a/ponghal-app/player-1.html
+++ b/ponghal-app/player-1.html
@@ -27,6 +27,13 @@
     <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
+
+
+    <h1>Login met facebook!</h1>
+
+
+
+
     <script type="text/javascript">
         $(function(){
             var socket = io.connect();
@@ -60,7 +67,5 @@
             })
         });
     </script>
-<!--<button id="up" >Up</button>-->
-    <!--<button id="down" >Down</button>-->
 </body>
 </html>
