-VCS Branch test

--- a/ponghal-app/player-2.html
+++ b/ponghal-app/player-2.html
@@ -27,6 +27,7 @@
     <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
+<h1>Welkom!</h1>
     <script type="text/javascript">
         $(function(){
             var socket = io.connect();
