--- a/ponghal-app/player-1.html
+++ b/ponghal-app/player-1.html
@@ -26,6 +26,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="public/js/development-manager.js"></script>
 </head>
 <body>
 <h1 id="mobileInfo"></h1>
@@ -38,6 +39,11 @@
     </main>
 
     <script>
+
+        var socket = io.connect();
+        var isLoggedIn = false;
+        var name = "";
+
         function statusChangeCallback(response) {
             console.log('statusChangeCallback');
             console.log(response);
@@ -48,6 +54,8 @@
                 // The person is not logged into your app or we are unable to tell.
                 document.getElementById('status').innerHTML = 'Please log ' +
                     'into this app.';
+                socket.emit('player 1 disconnect');
+                isLoggedIn = false;
             }
         }
 
@@ -85,13 +93,14 @@
                 console.log('Successful login for: ' + response.name);
                 document.getElementById('status').innerHTML =
                     'Thanks for logging in, ' + response.name + '!';
+                isLoggedIn = true;
+                socket.emit('player 1 connect', {name: response.name});
             });
         }
     </script>
 
     <script type="text/javascript">
         $(function(){
-            var socket = io.connect();
             var windowHeight = window.outerHeight;
 
             $(window).on('mousemove touchmove', function(e){
@@ -109,15 +118,13 @@
 
                 var positionYPercentage = y / windowHeight;
 
-                socket.emit('player 1 touch', positionYPercentage);
-            });
+//                console.log(positionYPercentage);
+//                console.log(name);
 
-            $('button').on('mousedown touchstart', function(){
-                socket.emit('player1 ' + $(this).attr('id'), true);
+                if (isLoggedIn || inDevelopment) {
+                    socket.emit('player 1 touch', {y: positionYPercentage});
+                }
             });
-            $('button').on('mouseup touchend', function(){
-                socket.emit('player1 ' + $(this).attr('id'), false)
-            })
         });
     </script>
     <script>
