- added 'swipe' guide at player pages - darkened markthal img

--- a/ponghal-app/player-1.html
+++ b/ponghal-app/player-1.html
@@ -30,116 +30,127 @@
 </head>
 <body>
 <h1 id="mobileInfo"></h1>
-    <main class="player">
-        <h1>PONGHAL</h1>
+<main class="player">
+    <h1>PONGHAL</h1>
 
-        <div class="fb-login-button" data-max-rows="1" data-size="xlarge" data-show-faces="false" data-auto-logout-link="true" onlogin="checkLoginState();" onlogout="checkLoginState();"></div>
+    <div class="fb-login-button" data-max-rows="1" data-size="xlarge" data-show-faces="false" data-auto-logout-link="true" onlogin="checkLoginState();" onlogout="checkLoginState();"></div>
 
-        <div id="status"></div>
-    </main>
+    <div id="status"></div>
 
-    <script>
+    <img id="guide" src="public/img/ponghal-guide.png" class="hidden" />
+</main>
 
-        var socket = io.connect();
-        var isLoggedIn = false;
-        var name = "";
+<script>
 
-        function statusChangeCallback(response) {
-            console.log('statusChangeCallback');
-            console.log(response);
-            if (response.status === 'connected') {
-                // Logged into your app and Facebook.
-                testAPI();
+    var socket = io.connect();
+    var isLoggedIn = false;
+    var name = "";
+
+    function statusChangeCallback(response) {
+        console.log('statusChangeCallback');
+        console.log(response);
+        if (response.status === 'connected') {
+            // Logged into your app and Facebook.
+            testAPI();
+        } else {
+            // The person is not logged into your app or we are unable to tell.
+            document.getElementById('status').innerHTML = 'Please log ' +
+                'into this app.';
+            socket.emit('player 1 disconnect');
+            isLoggedIn = false;
+        }
+    }
+
+    function checkLoginState() {
+        FB.getLoginStatus(function(response) {
+            statusChangeCallback(response);
+        });
+    }
+
+    window.fbAsyncInit = function() {
+        var appId;
+
+        if (inDevelopment) {
+            appId = '1018444101588462';
+        } else {
+            appId = '211652732647191'
+        }
+
+        FB.init({
+            appId      : appId,
+            cookie     : true,  // enable cookies to allow the server to access
+                                // the session
+            xfbml      : true,  // parse social plugins on this page
+            version    : 'v2.8' // use graph api version 2.8
+        });
+
+        FB.getLoginStatus(function(response) {
+            statusChangeCallback(response);
+        });
+    };
+
+    (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/sdk.js";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+
+    function testAPI() {
+        console.log('Welcome!  Fetching your information.... ');
+        FB.api('/me', function(response) {
+            console.log('Successful login for: ' + response.name);
+            document.getElementById('status').innerHTML =
+                'Welcome ' + response.name + ', have fun playing Ponghal!';
+            isLoggedIn = true;
+            socket.emit('player 1 connect', {name: response.name});
+            $("#guide").fadeIn(300);
+        });
+    }
+</script>
+
+<script type="text/javascript">
+    $(function(){
+        var windowHeight = window.outerHeight;
+
+        $(window).on('mousemove touchmove', function(e){
+            e.preventDefault();
+
+            var y = 0;
+            var touch = undefined;
+
+            if (e.originalEvent.touches) {
+                touch = e.originalEvent.touches[0];
+                y = touch.pageY;
             } else {
-                // The person is not logged into your app or we are unable to tell.
-                document.getElementById('status').innerHTML = 'Please log ' +
-                    'into this app.';
-                socket.emit('player 1 disconnect');
-                isLoggedIn = false;
+                y = e.pageY;
             }
-        }
 
-        function checkLoginState() {
-            FB.getLoginStatus(function(response) {
-                statusChangeCallback(response);
-            });
-        }
-
-        window.fbAsyncInit = function() {
-            FB.init({
-                appId      : '211652732647191',
-                cookie     : true,  // enable cookies to allow the server to access
-                                    // the session
-                xfbml      : true,  // parse social plugins on this page
-                version    : 'v2.8' // use graph api version 2.8
-            });
-
-            FB.getLoginStatus(function(response) {
-                statusChangeCallback(response);
-            });
-        };
-
-        (function(d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s); js.id = id;
-            js.src = "//connect.facebook.net/en_US/sdk.js";
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-
-        function testAPI() {
-            console.log('Welcome!  Fetching your information.... ');
-            FB.api('/me', function(response) {
-                console.log('Successful login for: ' + response.name);
-                document.getElementById('status').innerHTML =
-                    'Thanks for logging in, ' + response.name + '!';
-                isLoggedIn = true;
-                socket.emit('player 1 connect', {name: response.name});
-            });
-        }
-    </script>
-
-    <script type="text/javascript">
-        $(function(){
-            var windowHeight = window.outerHeight;
-
-            $(window).on('mousemove touchmove', function(e){
-                e.preventDefault();
-
-                var y = 0;
-                var touch = undefined;
-
-                if (e.originalEvent.touches) {
-                    touch = e.originalEvent.touches[0];
-                    y = touch.pageY;
-                } else {
-                    y = e.pageY;
-                }
-
-                var positionYPercentage = y / windowHeight;
+            var positionYPercentage = y / windowHeight;
 
 //                console.log(positionYPercentage);
 //                console.log(name);
 
-                if (isLoggedIn || inDevelopment) {
-                    socket.emit('player 1 touch', {y: positionYPercentage});
-                }
-            });
+            if (isLoggedIn || inDevelopment) {
+                socket.emit('player 1 touch', {y: positionYPercentage});
+            }
         });
-    </script>
-    <script>
-        function detectmob() {
-            return  navigator.userAgent.match(/webOS/i)
-                || navigator.userAgent.match(/iPhone/i)
-                || navigator.userAgent.match(/iPad/i)
-                || navigator.userAgent.match(/iPod/i)
-                || navigator.userAgent.match(/BlackBerry/i)
-                || navigator.userAgent.match(/Windows Phone/i);
-        }
-        if(detectmob()){
-            var mobile = document.getElementById('mobileInfo');
-            mobile.innerHTML = "Mobile is not capable of playing the game currently";
-        }
-    </script>
+    });
+</script>
+<script>
+    function detectmob() {
+        return  navigator.userAgent.match(/webOS/i)
+            || navigator.userAgent.match(/iPhone/i)
+            || navigator.userAgent.match(/iPad/i)
+            || navigator.userAgent.match(/iPod/i)
+            || navigator.userAgent.match(/BlackBerry/i)
+            || navigator.userAgent.match(/Windows Phone/i);
+    }
+    if(detectmob()){
+        var mobile = document.getElementById('mobileInfo');
+        mobile.innerHTML = "Mobile is not capable of playing the game currently";
+    }
+</script>
 </body>
 </html>
