--- a/ponghal-app/arduino-start.html
+++ b/ponghal-app/arduino-start.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Pong starter</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
-
+<h1>Press space to start the ball</h1>
+<script>
+    $(document).keydown(function(e){
+        if(e.keyCode == 32){
+            socket.emit('start ball', true);
+        }
+    });
+</script>
 </body>
 </html>
