--- a/ponghal-app/arduino-start.html
+++ b/ponghal-app/arduino-start.html
@@ -9,11 +9,15 @@
 <body>
 <h1>Press space to start the ball</h1>
 <script>
-    $(document).keydown(function(e){
-        if(e.keyCode == 32){
-            socket.emit('start ball', true);
-        }
+    var socket = io.connect();
+    $(function(){
+        $(document).keydown(function(e){
+            if(e.keyCode == 32){
+                socket.emit('start ball', true);
+            }
+        });
     });
+
 </script>
 </body>
 </html>
