-added lots of comments to game.js -Adeed an object to player-1 for the player itself.

--- a/ponghal-app/player-1.html
+++ b/ponghal-app/player-1.html
@@ -43,7 +43,7 @@
 <script>
 
     var socket = io.connect();
-    var isLoggedIn = false;
+    var isLoggedIn = true;
     var name = "";
 
     function statusChangeCallback(response) {
@@ -69,7 +69,11 @@
 
     window.fbAsyncInit = function() {
         var appId;
-
+        var player = {
+            name: '',
+            fbId: 0,
+            country: ''
+        }
         if (inDevelopment) {
             appId = '1018444101588462';
         } else {
