--- a/ponghal-app/highscores.html
+++ b/ponghal-app/highscores.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>The Ponghal - Highscores</title>
+    <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
 
