--- a/ponghal-app/index.html
+++ b/ponghal-app/index.html
@@ -1,18 +1,10 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>De Ponghal</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-        <script src="/socket.io/socket.io.js"></script>
-        <style>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
 
-        </style>
-        <link rel="stylesheet" type="text/css" href="public/css/style.css">
-    </head>
-    <body>
-        <main>
-            <canvas id="game"></canvas>
-        </main>
-        <script src="public/game.js"></script>
-    </body>
+</body>
 </html>
