--- a/ponghal-app/highscores.html
+++ b/ponghal-app/highscores.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>The Ponghal - Highscores</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/reqwest/2.0.5/reqwest.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
