--- a/ponghal-app/player-1.html
+++ b/ponghal-app/player-1.html
@@ -103,7 +103,7 @@
             document.getElementById('status').innerHTML =
                 'Welcome ' + response.name + ', have fun playing Ponghal!';
             isLoggedIn = true;
-            socket.emit('player 1 connect', {name: response.name});
+            socket.emit('player 1 connect', {name: response.name, country: response.country});
             $("#guide").fadeIn(300);
         });
     }
