-Moved game.js -Added Highscore API support

--- a/ponghal-app/game.html
+++ b/ponghal-app/game.html
@@ -15,6 +15,6 @@
         <main>
             <canvas id="game"></canvas>
         </main>
-        <script src="public/game.js"></script>
+        <script src="public/js/game.js"></script>
     </body>
 </html>
