--- a/ponghal-app/highscores.html
+++ b/ponghal-app/highscores.html
@@ -25,35 +25,9 @@
         <tfoot>
         </tfoot>
         <tbody id="tbody-highscores">
-        <!-- PROTOTYPE ROW-->
-        <tr>
-            <td class="highscores rank">1</td>
-            <td class="highscores flag"><img src="public/img/flags/nl_NL.png" alt="nl_NL"></td>
-            <td class="highscores country">The Netherlands</td>
-            <td class="highscores score">12</td>
-        </tr>
-        <tr>
-            <td class="highscores rank">2</td>
-            <td class="highscores flag"><img src="public/img/flags/de_DE.png" alt="de_DE"></td>
-            <td class="highscores country">Germany</td>
-            <td class="highscores score">8</td>
-        </tr>
-        <tr>
-            <td class="highscores rank">3</td>
-            <td class="highscores flag"><img src="public/img/flags/be_BE.png" alt="be_BE"></td>
-            <td class="highscores country">Belgium</td>
-            <td class="highscores score">5</td>
-        </tr>
-        <tr>
-            <td class="highscores rank">4</td>
-            <td class="highscores flag"><img src="public/img/flags/fr_FR.png" alt="fr_FR"></td>
-            <td class="highscores country">France</td>
-            <td class="highscores score">2</td>
-        </tr>
-
-
         </tbody>
     </table>
 </main>
+<script src="public/js/highscores.js"></script>
 </body>
 </html>
