- added highscore switcher

--- a/ponghal-app/player-1.html
+++ b/ponghal-app/player-1.html
@@ -31,7 +31,7 @@
 <body>
 <h1 id="mobileInfo"></h1>
 <main class="player">
-    <h1>PONGHAL</h1>
+    <h1 onclick="checkLoginState();">PONGHAL</h1>
 
     <div class="fb-login-button" data-max-rows="1" data-size="xlarge" data-show-faces="false" data-auto-logout-link="true" onlogin="checkLoginState();" onlogout="checkLoginState();"></div>
 
@@ -46,25 +46,66 @@
     var isLoggedIn = true;
     var name = "";
 
-    function statusChangeCallback(response) {
-        console.log('statusChangeCallback');
-        console.log(response);
-        if (response.status === 'connected') {
-            // Logged into your app and Facebook.
-            testAPI();
-        } else {
-            // The person is not logged into your app or we are unable to tell.
-            document.getElementById('status').innerHTML = 'Please log ' +
-                'into this app.';
-            socket.emit('player 1 disconnect');
-            isLoggedIn = false;
-        }
-    }
+//    function statusChangeCallback(response) {
+//        console.log('statusChangeCallback');
+//        console.log(response);
+//        if (response.status === 'connected') {
+//            // Logged into your app and Facebook.
+//            testAPI();
+//        } else {
+//            // The person is not logged into your app or we are unable to tell.
+//            document.getElementById('status').innerHTML = 'Please log ' +
+//                'into this app.';
+//            socket.emit('player 1 disconnect');
+//            isLoggedIn = false;
+//        }
+//    }
 
     function checkLoginState() {
-        FB.getLoginStatus(function(response) {
-            statusChangeCallback(response);
-        });
+//        FB.getLoginStatus(function(response) {
+//            statusChangeCallback(response);
+//        });
+
+        FB.login(function(response) {
+            if (response.authResponse) {
+                console.log('Welcome!  Fetching your information.... ');
+                FB.api('/me', {fields: 'location'}, function(response) {
+                    console.log('Good to see you, ' + response.name + '.');
+                    console.log('resposne', response);
+
+
+                    var countryShortcode = "";
+
+                    $.get('https://maps.googleapis.com/maps/api/geocode/json?key=AIzaSyCbSQHZZzYERH2kAg0xlgSy04GTCQaHcws&address=' + response.location.name, function(res){
+//                        console.log('geocoding', res);
+
+
+                        for (var i = 0; i < res.results[0].address_components.length; i++) {
+
+//                            console.log('adrr comp: ', res.results[0].address_components[i]);
+
+                            for (var j = 0; j < res.results[0].address_components[i].types.length; j++) {
+
+
+//                                console.log('types: ', res.results[0].address_components[i].types[j]);
+
+                                if(res.results[0].address_components[i].types[j] == "country"){
+                                    countryShortcode = res.results[0].address_components[i].short_name;
+                                }
+
+                            }
+
+                        }
+
+                        console.log("USER COUNTRY SHORTCODE: " + countryShortcode);
+
+                    });
+
+                });
+            } else {
+                console.log('User cancelled login or did not fully authorize.');
+            }
+        }, {scope: 'user_location'});
     }
 
     window.fbAsyncInit = function() {
@@ -88,9 +129,9 @@
             version    : 'v2.8' // use graph api version 2.8
         });
 
-        FB.getLoginStatus(function(response) {
-            statusChangeCallback(response);
-        });
+//        FB.getLoginStatus(function(response) {
+//            statusChangeCallback(response);
+//        });
     };
 
     (function(d, s, id) {
@@ -101,17 +142,17 @@
         fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
 
-    function testAPI() {
-        console.log('Welcome!  Fetching your information.... ');
-        FB.api('/me', function(response) {
-            console.log('Successful login for: ' + response.name);
-            document.getElementById('status').innerHTML =
-                'Welcome ' + response.name + ', have fun playing Ponghal!';
-            isLoggedIn = true;
-            socket.emit('player 1 connect', {name: response.name});
-            $("#guide").fadeIn(300);
-        });
-    }
+//    function testAPI() {
+//        console.log('Welcome!  Fetching your information.... ');
+//        FB.api('/me', function(response) {
+//            console.log('Successful login for: ' + response.name);
+//            document.getElementById('status').innerHTML =
+//                'Welcome ' + response.name + ', have fun playing Ponghal!';
+//            isLoggedIn = true;
+//            socket.emit('player 1 connect', {name: response.name});
+//            $("#guide").fadeIn(300);
+//        });
+//    }
 </script>
 
 <script type="text/javascript">
