--- a/ponghal-app/player-1.html
+++ b/ponghal-app/player-1.html
@@ -36,6 +36,10 @@
 </main>
 
 <script>
+    window.addEventListener('beforeunload',function(){
+        socket.emit('player 1 disconnect');
+    });
+
     var player = {
         name: '',
         fbId: 0,
